Update project page

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,13 +23,11 @@ nav {
     justify-content: space-between;
     align-items: center;
     color: blue;
-    
-    
 }
 .logo {
     font-size: 1.5em;
 }
-.logo a{
+.logo a {
     text-decoration: none;
     color: blue;
 }
@@ -82,11 +80,16 @@ nav {
     padding: 10px 0 0 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
 }
 .content label {
-    font-size: 3em;
+    font-size: 4em;
     margin: 0;
+    line-height: 1.2;
+    margin-bottom: 5px;
     width: 100%;
 }
 .content label a {
