--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
     background-color: #f1f1f1;
     color: #000;
     padding-top: 60px;
+    padding-right: 20px;
 }
 header {
     background-color: transparent;
@@ -107,6 +108,7 @@ nav {
     font-size: 1.5em;
     cursor: pointer;
 }
+
 @media screen and (max-width: 768px) {
     .nav-links {
         display: none;
