--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,12 @@ body {
     font-family: "Courier New", Courier, monospace;
     background-color: #f1f1f1;
     color: #000;
-    padding-top: 60px;
+    padding-top: 70px;
     padding-right: 20px;
 }
 header {
     background-color: transparent;
-    padding: 10px 20px 5px 20px;
+    padding: 20px 20px 15px 20px;
     position: fixed;
     width: 100%;
     top: 0;
@@ -26,19 +26,20 @@ nav {
     color: blue;
 }
 .logo {
-    font-size: 1.5em;
+    font-size: 2.0em;
+    
 }
 .logo a {
     text-decoration: none;
     color: blue;
 }
 .nav-links {
-    list-style: none;
-    display: flex;
+    list-style:none;
+    display:contents;
     align-items: center;
 }
 .nav-links li {
-    margin-left: 20px;
+    margin-left: 100px;
 }
 .nav-links a {
     text-decoration: none;
@@ -57,9 +58,8 @@ nav {
     cursor: pointer;
 }
 .dropdown-content {
-    display: none;
+    display:none;
     position: absolute;
-
     min-width: 160px;
     z-index: 1;
     color: blue;
@@ -78,7 +78,7 @@ nav {
     display: block;
 }
 .content {
-    padding: 10px 0 0 20px;
+    padding: 20px 20px 15px 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -100,7 +100,8 @@ nav {
     transition: all 0.3s ease;
 }
 .content label a:hover {
-    text-decoration: line-through;
+    text-decoration:line-through;
+    
     text-decoration-color: blue;
 }
 .icon {
