--- a/css/styles.css
+++ b/css/styles.css
@@ -8,50 +8,56 @@ body {
     font-family: "Courier New", Courier, monospace;
     background-color: #f1f1f1;
     color: #000;
-    padding-top: 70px;
+    padding-top: 90px;
     padding-right: 20px;
 }
+
 header {
     background-color: #f1f1f1;
-    padding: 20px 20px 15px 20px;
+    padding: 20px 20px 20px 20px;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
     z-index: 1000;
-    border-bottom: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: #000000;
+    border-bottom: 1px solid #000000;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: blue;
 }
+
 .logo {
     font-size: 2em;
 }
+
 .logo a {
     text-decoration: none;
     color: blue;
 }
+
 .nav-links {
     list-style: none;
     display: contents;
     align-items: center;
 }
+
 .nav-links li {
     margin-left: 100px;
 }
+
 .nav-links a {
     text-decoration: none;
-
     color: blue;
 }
+
 .dropdown {
     position: relative;
 }
+
 .dropbtn {
     background-color: transparent;
     color: blue;
@@ -60,6 +66,7 @@ nav {
     border: none;
     cursor: pointer;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -67,19 +74,23 @@ nav {
     z-index: 1;
     color: blue;
 }
+
 .dropdown-content a {
     color: blue;
     padding: 2px 10px;
     text-decoration: none;
     display: block;
 }
+
 .dropdown-content a:hover {
     text-decoration: line-through;
     text-decoration-color: black;
 }
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
 .content {
     padding: 20px 20px 15px 20px;
     display: flex;
@@ -89,6 +100,7 @@ nav {
     max-width: 100%;
     margin: 0 auto;
 }
+
 .content label {
     font-size: 4em;
     margin: 0;
@@ -96,21 +108,64 @@ nav {
     margin-bottom: 5px;
     width: 100%;
 }
+
 .content label a {
     text-decoration: none;
     color: inherit;
     display: block;
     transition: all 0.3s ease;
 }
+
 .content label a:hover {
     text-decoration: line-through;
-
     text-decoration-color: blue;
 }
+
 .icon {
     display: none;
     font-size: 1.5em;
     cursor: pointer;
+}
+
+main {
+    padding: 20px;
+}
+
+.project-list {
+    margin: 20px;
+}
+
+.project {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid blue;
+}
+
+.project-name {
+    font-size: 3em;
+    color: #000;
+    flex-grow: 7; /* Allow the project name to take up more space */
+    margin-right: 100px; /* Add space between project name and status */
+}
+
+.status {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 2em;
+}
+
+.launched {
+    color: orange;
+}
+
+.coming-soon {
+    color: red;
+}
+
+.in-progress {
+    color: green;
 }
 
 @media screen and (max-width: 768px) {
@@ -123,10 +178,12 @@ nav {
         left: 0;
         background-color: #f1f1f1;
     }
+
     .nav-links li {
         margin: 0;
         width: 100%;
     }
+
     .nav-links a,
     .dropbtn {
         display: block;
@@ -134,30 +191,53 @@ nav {
         width: 100%;
         text-align: left;
     }
+
     .dropdown {
         width: 100%;
     }
+
     .dropdown-content {
         position: static;
         width: 100%;
         display: none;
     }
+
     .dropdown-content a {
         padding-left: 60px;
     }
+
     .icon {
         display: block;
     }
+
     .responsive .nav-links {
         display: flex;
     }
+
     .responsive .dropdown-content {
         display: none;
     }
+
     .responsive .dropdown.active .dropdown-content {
         display: block;
     }
+
     .content label {
+        font-size: 1.5em;
+    }
+
+    .project {
+        flex-direction: column; /* Stack project name and status vertically */
+        align-items: flex-start; /* Align items to the start */
+    }
+
+    .project-name {
+        margin-right: 0;
+        font-size: 2em;
+        margin-bottom: 10px; /* Add spacing between name and status */
+    }
+
+    .status {
         font-size: 1.5em;
     }
 }
