--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin: 20px;
     padding: 0;
     font-family: Arial, sans-serif;
 }
@@ -17,7 +17,7 @@ body {
 p {
     text-align: center;
     max-width: 800px;
-    margin: 20px auto;
+    margin: 50px auto;
 }
 
 .card-container {
@@ -26,7 +26,8 @@ p {
     justify-content: center;
     align-items: center;
     max-width: 1200px;
-    margin: 0 auto;
+    padding: 50px;
+    margin: 10px auto;
 }
 
 .card {
@@ -51,7 +52,7 @@ p {
 }
 
 .card h2 {
-    margin: 0;
+    margin: 10px;
     font-size: 18px;
 }
 
