--- a/css/about.css
+++ b/css/about.css
@@ -9,7 +9,7 @@
     color: white;
     padding: 40px;
     text-align: left;
-    font-size: 8vh;
+    font-size: 2em;
     font-family: 'Courier New', Courier, monospace;
     line-height: 1.4;
     margin: 20px;
