--- a/css/styles.css
+++ b/css/styles.css
@@ -278,13 +278,13 @@ main {
 
 /* Dark Mode Styles for Tags */
 .dark-mode .tag {
-    background-color: #555;
+    background-color: #1c1b1b;
     color: #f1f1f1;
 }
 
 /* Hover Effect for Tags */
 .content label:hover .tag {
-    background-color: #0000FF;
+    background-color: #020202;
     color: white;
 }
 
@@ -447,6 +447,6 @@ footer {
         font-size: 0.7em;
         padding: 1px 6px;
     }
-}
+
 
 }
