--- a/css/styles.css
+++ b/css/styles.css
@@ -32,14 +32,30 @@ nav {
     flex-wrap: wrap;
 }
 
-.logo {
-    font-size: 2em;
+
+/* Default: Show light mode logo, hide dark mode logo */
+.logo-light {
+    display: block;
 }
 
-.logo a {
-    text-decoration: none;
-    color: blue;
+.logo-dark {
+    display: none;
 }
+
+/* Dark Mode: Hide light mode logo, show dark mode logo */
+.dark-mode .logo-light {
+    display: none;
+}
+
+.dark-mode .logo-dark {
+    display: block;
+}
+
+.logo img {
+    max-height: 40px; /* Adjust size */
+    width: auto; /* Maintain aspect ratio */
+}
+
 
 /* Navigation Links */
 .nav-links {
@@ -213,6 +229,8 @@ main {
     color: #f1f1f1;
 }
 
+
+
 .dark-mode .dropdown-content {
     background-color: #222;
 }
@@ -367,6 +385,10 @@ footer {
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
+        .logo img {
+        max-height: 40px; /* Smaller logo for mobile */
+    }
+
     nav {
         flex-direction: column;
         align-items: flex-start;
