--- a/css/project.css
+++ b/css/project.css
@@ -99,6 +99,11 @@ body.dark-mode .project {
     box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
 }
 
+body.dark-mode .project:hover {
+    background-color: #0000ff;
+    box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
+}
+
 body.dark-mode .project-name {
     color: #f1f1f1;
 }
