--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,33 @@ nav {
     flex-wrap: wrap;
 }
 
+.title-background {
+    position: relative;
+}
+
+.title-background h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 25em;  /* Adjust as needed */
+    color: rgba(0, 0, 0, 0.1); /* Light color for background text */
+    z-index: -1; /* Ensure it's behind the label */
+    pointer-events: none; /* Make sure it doesn't interfere with clicks */
+}
+
+.title-background label {
+    position: relative;
+    z-index: 1; /* Make sure labels are above the background title */
+    font-size: 5.8em;
+    margin-bottom: 10px;
+    background-color: #f1f1f1;
+    padding: 20px;
+    box-shadow: 0 10px 6px rgba(48, 47, 46, 0.79);
+    border: 1px solid #000;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
 
 /* Default: Show light mode logo, hide dark mode logo */
 .logo-light {
@@ -55,7 +82,6 @@ nav {
     max-height: 40px; /* Adjust size */
     width: auto; /* Maintain aspect ratio */
 }
-
 
 /* Navigation Links */
 .nav-links {
@@ -229,8 +255,6 @@ main {
     color: #f1f1f1;
 }
 
-
-
 .dark-mode .dropdown-content {
     background-color: #222;
 }
@@ -269,8 +293,8 @@ main {
 .dark-mode .social-icons a:hover {
     color: #2196f3;
 }
-.dark-mode .footer-section p{
-    color:#f1f1f1;
+.dark-mode .footer-section p {
+    color: #f1f1f1;
 }
 /* Tag Styles */
 .tag {
@@ -282,7 +306,9 @@ main {
     font-size: 0.4em;
     margin-right: 5px;
     margin-top: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition:
+        background-color 0.3s ease,
+        color 0.3s ease;
 }
 
 .content label {
@@ -387,7 +413,7 @@ footer {
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
-        .logo img {
+    .logo img {
         max-height: 40px; /* Smaller logo for mobile */
     }
 
@@ -472,5 +498,15 @@ footer {
         padding: 1px 6px;
     }
 
+    pre {
+        font-size: 14px;
+        padding: 0.8em 1.2em;
+    }
+}
 
+@media screen and (max-width: 480px) {
+    pre {
+        font-size: 13px;
+        padding: 0.2em 02em;
+    }
 }
